--- a/DataExchangeByEvents/DataProcessors/exch_ПомощникСозданияОбменаДанными/Forms/УдалениеНастройкиСинхронизации.xml
+++ b/DataExchangeByEvents/DataProcessors/exch_ПомощникСозданияОбменаДанными/Forms/УдалениеНастройкиСинхронизации.xml
@@ -1,12 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.9">
-	<CommonModule uuid="de9dadd8-014f-40be-9513-191469533b8c">
-		<InternalInfo/>
+	<Form uuid="b2358a40-fe13-4e0b-9a96-ea1220766d8e">
 		<Properties>
-			<Name>ОбменДаннымиСервер</Name>
+			<Name>УдалениеНастройкиСинхронизации</Name>
+			<Synonym>
+				<v8:item>
+					<v8:lang>ru</v8:lang>
+					<v8:content>Удаление настройки синхронизации</v8:content>
+				</v8:item>
+			</Synonym>
 			<Comment/>
-			<ObjectBelonging>Adopted</ObjectBelonging>
-			<ClientOrdinaryApplication>true</ClientOrdinaryApplication>
+			<FormType>Managed</FormType>
+			<IncludeHelpInContents>false</IncludeHelpInContents>
+			<UsePurposes>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">PlatformApplication</v8:Value>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">MobilePlatformApplication</v8:Value>
+			</UsePurposes>
+			<ExtendedPresentation/>
 		</Properties>
-	</CommonModule>
+	</Form>
 </MetaDataObject>
